// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrState Component for HR should match snapshot 1`] = `
<WithStyles(Paper)
  className="PrState-paper-1"
>
  <WithStyles(List)>
    <WithStyles(ListItem)>
      <WithStyles(ListItemText)>
        Fortschritt des Reviewprozesses
      </WithStyles(ListItemText)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)>
      <WithStyles(PrStateStepper)
        activeStep={0}
        stepStructure={
          Array [
            Object {
              "mainStepLabel": "Vorbereitung",
              "substeps": Object {
                "ALL_DATES_ACCEPTED": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": null,
                  "rendering": Object {
                    "complete": "Alle Teilnehmer haben die Anfrage beantwortet",
                    "incompleteForActionPerformer": null,
                    "incompleteForNonActionPerformer": null,
                  },
                },
                "FILLED_SHEET_EMPLOYEE": Object {
                  "isCompleted": true,
                  "isCurrentUserActionPerformer": false,
                  "label": "Mitarbeiter: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
                "FILLED_SHEET_REVIEWER": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": "Beurteiler: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
                "REQUESTED_DATE": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": "Terminfindung",
                  "rendering": Object {
                    "complete": null,
                    "incompleteForActionPerformer": "Bitte einen Termin vereinbaren",
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "Gespräch",
              "substeps": Object {
                "MODIFICATIONS_ACCEPTED_REVIEWER": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": "Beurteiler: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "Abschluss",
              "substeps": Object {
                "MODIFICATIONS_ACCEPTED_EMPLOYEE": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": "Mitarbeiter:",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "PR-Nachbearbeitung",
              "substeps": Object {
                "PR_COMPLETED": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": true,
                  "label": "HR: ",
                  "rendering": Object {
                    "complete": "Archiviert",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
          ]
        }
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
</WithStyles(Paper)>
`;

exports[`PrState Component for HR should match snapshot when button for HR is present 1`] = `
<WithStyles(Paper)
  className="PrState-paper-1"
>
  <WithStyles(List)>
    <WithStyles(ListItem)>
      <WithStyles(ListItemText)>
        Fortschritt des Reviewprozesses
      </WithStyles(ListItemText)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)>
      <WithStyles(PrStateStepper)
        activeStep={2}
        stepStructure={
          Array [
            Object {
              "mainStepLabel": "Vorbereitung",
              "substeps": Object {
                "ALL_DATES_ACCEPTED": Object {
                  "isCompleted": true,
                  "isCurrentUserActionPerformer": false,
                  "label": "Terminfindung",
                  "rendering": Object {
                    "complete": "Alle Teilnehmer haben die Anfrage beantwortet",
                    "incompleteForActionPerformer": null,
                    "incompleteForNonActionPerformer": null,
                  },
                },
                "FILLED_SHEET_EMPLOYEE": Object {
                  "isCompleted": true,
                  "isCurrentUserActionPerformer": false,
                  "label": "Mitarbeiter: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
                "FILLED_SHEET_REVIEWER": Object {
                  "isCompleted": true,
                  "isCurrentUserActionPerformer": false,
                  "label": "Beurteiler: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
                "REQUESTED_DATE": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": null,
                  "rendering": Object {
                    "complete": null,
                    "incompleteForActionPerformer": "Bitte einen Termin vereinbaren",
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "Gespräch",
              "substeps": Object {
                "MODIFICATIONS_ACCEPTED_REVIEWER": Object {
                  "isCompleted": true,
                  "isCurrentUserActionPerformer": false,
                  "label": "Beurteiler: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "Abschluss",
              "substeps": Object {
                "MODIFICATIONS_ACCEPTED_EMPLOYEE": Object {
                  "isCompleted": true,
                  "isCurrentUserActionPerformer": false,
                  "label": "Mitarbeiter:",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "PR-Nachbearbeitung",
              "substeps": Object {
                "PR_COMPLETED": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": true,
                  "label": "HR: ",
                  "rendering": Object {
                    "complete": "Archiviert",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
          ]
        }
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
</WithStyles(Paper)>
`;

exports[`PrState Component for employee should match snapshot 1`] = `
<WithStyles(Paper)
  className="PrState-paper-1"
>
  <WithStyles(List)>
    <WithStyles(ListItem)>
      <WithStyles(ListItemText)>
        Fortschritt des Reviewprozesses
      </WithStyles(ListItemText)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)>
      <WithStyles(PrStateStepper)
        activeStep={0}
        stepStructure={
          Array [
            Object {
              "mainStepLabel": "Vorbereitung",
              "substeps": Object {
                "ALL_DATES_ACCEPTED": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": null,
                  "rendering": Object {
                    "complete": "Alle Teilnehmer haben die Anfrage beantwortet",
                    "incompleteForActionPerformer": null,
                    "incompleteForNonActionPerformer": null,
                  },
                },
                "FILLED_SHEET_EMPLOYEE": Object {
                  "isCompleted": true,
                  "isCurrentUserActionPerformer": true,
                  "label": "Mitarbeiter: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
                "FILLED_SHEET_REVIEWER": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": "Beurteiler: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
                "REQUESTED_DATE": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": true,
                  "label": "Terminfindung",
                  "rendering": Object {
                    "complete": null,
                    "incompleteForActionPerformer": "Bitte einen Termin vereinbaren",
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "Gespräch",
              "substeps": Object {
                "MODIFICATIONS_ACCEPTED_REVIEWER": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": "Beurteiler: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "Abschluss",
              "substeps": Object {
                "MODIFICATIONS_ACCEPTED_EMPLOYEE": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": true,
                  "label": "Mitarbeiter:",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
          ]
        }
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
</WithStyles(Paper)>
`;

exports[`PrState Component for reviewer should match snapshot 1`] = `
<WithStyles(Paper)
  className="PrState-paper-1"
>
  <WithStyles(List)>
    <WithStyles(ListItem)>
      <WithStyles(ListItemText)>
        Fortschritt des Reviewprozesses
      </WithStyles(ListItemText)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)>
      <WithStyles(PrStateStepper)
        activeStep={0}
        stepStructure={
          Array [
            Object {
              "mainStepLabel": "Vorbereitung",
              "substeps": Object {
                "ALL_DATES_ACCEPTED": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": true,
                  "label": null,
                  "rendering": Object {
                    "complete": "Alle Teilnehmer haben die Anfrage beantwortet",
                    "incompleteForActionPerformer": null,
                    "incompleteForNonActionPerformer": null,
                  },
                },
                "FILLED_SHEET_EMPLOYEE": Object {
                  "isCompleted": true,
                  "isCurrentUserActionPerformer": false,
                  "label": "Mitarbeiter: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
                "FILLED_SHEET_REVIEWER": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": true,
                  "label": "Beurteiler: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
                "REQUESTED_DATE": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": "Terminfindung",
                  "rendering": Object {
                    "complete": null,
                    "incompleteForActionPerformer": "Bitte einen Termin vereinbaren",
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "Gespräch",
              "substeps": Object {
                "MODIFICATIONS_ACCEPTED_REVIEWER": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": true,
                  "label": "Beurteiler: ",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
            Object {
              "mainStepLabel": "Abschluss",
              "substeps": Object {
                "MODIFICATIONS_ACCEPTED_EMPLOYEE": Object {
                  "isCompleted": false,
                  "isCurrentUserActionPerformer": false,
                  "label": "Mitarbeiter:",
                  "rendering": Object {
                    "complete": "Abgeschlossen",
                    "incompleteForActionPerformer": <CheckRequiredClick
                      check={[Function]}
                      message="Bitte alle Pflichtfelder ausfüllen."
                      onClick={[Function]}
          >
                      <WithStyles(PrStatusActionButton)
                                  label="Freigabe"
                      />
          </CheckRequiredClick>,
                    "incompleteForNonActionPerformer": "Nicht abgeschlossen",
                  },
                },
              },
            },
          ]
        }
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
</WithStyles(Paper)>
`;
